crates/rooch-framework-tests/tests/cases/object/object_cap.exp
processed 3 tasks

task 1 'publish'. lines 3-21:
status EXECUTED

task 2 'run'. lines 22-34:
Error: error: resource type "TestObject" in function "0x2::context::new_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:29:23
   │
29 │         let obj_ref = context::new_object<TestObject>(ctx, object);
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "TestObject" in function "0x2::context::remove_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:30:42
   │
30 │         let (_id, _owner, test_object) = context::remove_object<TestObject>(ctx, object_ref::id(&obj_ref));
   │                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


